--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     import { OrbitControls } from 'https://cdn.skypack.dev/three@0.157.0/examples/jsm/controls/OrbitControls.js';
     import { GUI } from 'https://cdn.skypack.dev/dat.gui';
 
-    // Sahne, kamera ve renderer oluşturma
+    // Scene, camera, and renderer setup
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.z = 5;
@@ -31,17 +31,17 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.getElementById('container').appendChild(renderer.domElement);
 
-    // OrbitControls ekleme
+    // OrbitControls
     const controls = new OrbitControls(camera, renderer.domElement);
 
-    // Işıklandırma
+    // Lighting
     const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
     scene.add(ambientLight);
 
     const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
     scene.add(directionalLight);
 
-    // Shader'lar
+    // Custom Shaders
     const vertexShader = `
       uniform float scale;
       uniform float displacement;
@@ -87,7 +87,7 @@
       }
     `;
 
-    // Geometri oluşturma (örnek olarak bir küp)
+    // Geometry with ShaderMaterial
     const geometry = new THREE.BoxGeometry();
     const material = new THREE.ShaderMaterial({
       vertexShader,
@@ -96,14 +96,14 @@
         time: { value: 0.0 },
         scale: { value: 1.0 },
         displacement: { value: 0.2 },
-        color1: { value: new THREE.Color(0xff0000) }, // Kırmızı
-        color2: { value: new THREE.Color(0x0000ff) }, // Mavi
+        color1: { value: new THREE.Color(0xff0000) }, // Red
+        color2: { value: new THREE.Color(0x0000ff) }, // Blue
       },
     });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
-    // GUI oluşturma ve slider'ları ekleme
+    // GUI setup
     const gui = new GUI();
     gui.add(material.uniforms.time, 'value', 0.0, 10.0).name('Time');
     gui.add(material.uniforms.scale, 'value', 0.1, 2.0).name('Scale');
@@ -113,7 +113,7 @@
     gui.add(ambientLight, 'intensity', 0, 1).name('Ambient Light');
     gui.add(directionalLight, 'intensity', 0, 1).name('Directional Light');
 
-    // Animasyon döngüsü
+    // Animation loop
     function animate(timestamp) {
       cube.rotation.x += 0.01;
       cube.rotation.y += 0.01;
@@ -123,9 +123,9 @@
       renderer.render(scene, camera);
     }
 
-    renderer.setAnimationLoop(animate); // requestAnimationFrame yerine setAnimationLoop kullanımı
+    renderer.setAnimationLoop(animate);
 
-    // Window resize handling
+    // Handle window resize
     window.addEventListener('resize', () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
